--- a/src/views/index.html
+++ b/src/views/index.html
@@ -54,14 +54,13 @@
                                 <span>Don't judge a book by its cover</span>
                             </h2>
                             <p class="block-book-demo__author">- By Emma Anderson</p>
-
                         </div>
                         <div class="block-text">
                             <p class="block-text__name">- By Emma Anderson</p>
                             <h1 class="block-text__title">BUKEE: THE BOOK <span>A room without books is like a body without a soul</span></h1>
                             <p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
                             <p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut</p>
-                            <a href="" class="block-text__btn">Buy this book - $15.00	</a>
+                            <a href="" class="block-text__btn block-text__btn--main">Buy this book - $15.00	</a>
                             <small class="block-text__small">* Some conditions may applicable</small>
                         </div>
                     </div>
@@ -92,7 +91,7 @@
 
                 <div class="block-counter">
                         <p><span>12</span>Total published books</p>
-                        <p><span>5</span>Sest selling book</p>
+                        <p><span>5</span>Best selling book</p>
                         <p><span>15,000</span>Happy readers</p>
                 </div>
             </div>
@@ -132,8 +131,182 @@
                         <button class="block-about-table__btn">More</button>
                     </div>
                 </div>
+            </div> 
+        </div>
+        <div class="page">
+            <div class="wrap">
+                <h2 class="page__title">Other Books</h2> 
+                <p class="page__subtitle">Some books you might be interested in</p>
+                <div class="block-product">
+                    <div class="block-product-item">
+                        <div class="block-product-demo">
+                            <h2 class="block-product-demo__title">
+                                Inception
+                                <span>Books are the best friends</span>
+                            </h2>
+                            <p class="block-product-demo__author">- By Emma Anderson</p>
+                        </div>
+                        <div class="block-product-text">
+                            <h3>Inception</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+                            <a href="">READ MORE</a>
+                        </div>
+                    </div>
+
+                    <div class="block-product-item">
+                        <div class="block-product-demo">
+                            <h2 class="block-product-demo__title">
+                                Fight Club
+                                <span>Books are the best friends</span>
+                            </h2>
+                            <p class="block-product-demo__author">- By Emma Anderson</p>
+                        </div>
+                        <div class="block-product-text">
+                            <h3>Fight Club</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+                            <a href="">READ MORE</a>
+                        </div>
+                    </div>
+
+                    <div class="block-product-item">
+                        <div class="block-product-demo">
+                            <h2 class="block-product-demo__title">
+                                Daredevils
+                                <span>Books are the best friends</span>
+                            </h2>
+                            <p class="block-product-demo__author">- By Emma Anderson</p>
+                        </div>
+                        <div class="block-product-text">
+                            <h3>Daredevils</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+                            <a href="">READ MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <a href="" class="page__btn">Browse all books</a>
+            </div>
+        </div>
+        <div class="page">
+            <div class="wrap">
+                <div class="block-author">
+                    <div class="block-ava">
+                        <svg class="block-ava__svg block-ava__svg--left" width="435" height="704">
+                            <linearGradient id="gradient" gradientUnits="userSpaceOnUse" x1="0" y1="0" x2="435" y2="704">
+                                <stop offset="0" style="stop-color: #446a87"/>
+                                <stop offset="1" style="stop-color: #59c2ae"/>
+                            </linearGradient>
+                            <rect width="435" height="704" x="0" y="0" fill="url(#gradient)"></rect>
+                        </svg>
+                        <img class="block-ava__img  block-ava__img--left" src="../img/emma.png">
+                    </div>
+                    <div class="block-text block-text--width">
+                        <p class="block-text__name block-text__name_top">- Emma Anderson</p>   
+                        <h2 class="block-text__title">Upcoming Events <span>Some upcoming events you might be interested in</span></h2>
+                        <div class="block-text-item">
+                            <p class="block-text-item__date">November 21, 2018</p>
+                            <h4 class="block-text-item__title">Book signing - San francisco, CA</h4>
+                            <p class="block-text-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspen disse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                            <a href="" class="block-text-item__btn">Register</a> 
+                        </div>
+                        <div class="block-text-item">
+                            <p class="block-text-item__date">November 21, 2018</p>
+                            <h4 class="block-text-item__title">Book reading - Los Angeles, CA</h4>
+                            <p class="block-text-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspen disse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                            <a href="" class="block-text-item__btn">Register</a> 
+                        </div>
+                    </div>  
+                </div> 
+            </div>
         </div> 
+
+        <div class="page page_gray">
+            <div class="wrap">
+                <h2 class="page__title">Latest from Blog</h2> 
+                <p class="page__subtitle">Some of the latest posts from my personal blog</p>
+                <div class="block-blog">
+                    <div class="block-blog-item">
+                        <div class="block-blog-img"><img src="../img/blog1.jpg" alt=""></div>
+                        <h4>Importance of light in photography</h4>
+                        <div class="block-blog-info">
+                            <p>By<a href="">Emma Anderson</a></p> <span>-</span><a href="">June 20, 2018</a>
+                        </div>
+                        <p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
+                    </div>
+                    <div class="block-blog-item">
+                        <div class="block-blog-img"><img src="../img/blog2.jpg" alt=""></div>
+                        <h4>The tools you need for the perfection</h4>
+                        <div class="block-blog-info">
+                            <p>By<a href="">Emma Anderson</a></p> <span>-</span><a href="">June 25, 2018</a>
+                        </div>
+                        <p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
+                    </div>
+                    <div class="block-blog-item">
+                        <div class="block-blog-img"><img src="../img/blog3.jpg" alt=""></div>
+                        <h4>Knowing the difference is important</h4>
+                        <div class="block-blog-info">
+                            <p>By<a href="">Emma Anderson</a></p> <span>-</span><a href="">August 22, 2018</a>
+                        </div>
+                        <p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
+                    </div>
+                </div>
+                <a href="" class="page__btn">Read more in the blog</a>
+            </div> 
+        </div>
         
+        <div class="page">
+            <div class="wrap">
+                <div class="block-letter">
+                    <div class="block-letter-item">
+                        <h2 class="block-letter__title">Join Newsletter</h2>
+                        <p class="block-letter__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspen disse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                    </div>
+                    <div class="block-letter-item">
+                        <input class="block-letter__input" type="text" name="" placeholder="Enter your email">
+                        <button class="block-letter__btn">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="wrap">
+                <div class="block-footer">
+                    <div class="block-footer__copy">
+                        <a href="" class="block-footer__logo"></a>
+                        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p class="block-footer__cr">© 2018 Bukee Private Limited.</p>
+                    </div>
+                    <div class="block-footer__info">
+                        <h2 class="block-footer__title">
+                            Useful Links
+                        </h2>
+                        <ul class="block-footer__list">
+                            <li>About Bukee</li>
+                            <li>Explore Our Ecosystem</li>
+                            <li>Monthly Community Meetup</li>
+                            <li>Privacy Policy</li>
+                        </ul>
+                    </div>
+                    <div class="block-footer__info block-footer__right">
+                        <h2 class="block-footer__title">
+                            Our Contacts
+                        </h2>
+                        <ul class="block-footer__list">
+                            <li>Amphitheatre Parkway, CA, 94043</li>
+                            <li>Call us on: +4455663322</li>
+                            <li>Email: support@bukee.mail</li>
+                        </ul>
+                        <ul class="block-footer__social">
+                            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fab fa-twitch"></i></a></li>
+                            <li><a href=""><i class="fab fa-youtube"></i></a></li>
+                            <li><a href=""><i class="fab fa-slack-hash"></i></a></li>
+                            <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     <script src="../js/main.js"></script>
     </body>
 </html>
