--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@ $light-color: white;
 $accent-color: #65e496;
 $bg-light-color: #f5f6fa;
 $bg-dark-color: #44444f;
+$gray-color: #9191b5;
 
 h1, h2, h3, h4, p {
     margin: 0;
@@ -37,30 +38,43 @@ body {
     color: $light-color;
     padding-bottom: 158px;
 }
+
 .page {
-    margin-top: 161px;
+    padding-top: 161px;
     padding-bottom: 160px;
     &_gray {
         background-color: $bg-light-color;
-        margin-top: 0;
     }
     &__title {
         font-size: 48px;
         text-align: center;
-        margin-bottom: 25px;
-        padding-top: 160px;
+        margin-bottom: 26px;
         letter-spacing: 2px;
-
     }
     &__subtitle {
-        color: $accent-color;
+        color: #65e496;
         text-align: center;
         font-size: 18px;
-        letter-spacing: 0.9px;
+        letter-spacing: 0.77px;
+        padding-left: 0px;
+    }
+    &__btn{
+        background: linear-gradient(to bottom right, #65e49c, #65e4b0);
+        border: none;
+        color: white;
+        text-decoration: none;
+        border-radius: 3px;
+        text-align: center;
+        font-size: 18px;
+        margin: 0 auto;
+        display: block;
+        max-width: 220px;
+        margin-top: -13px;
+        padding: 14px 0px;
+        letter-spacing: 0.7px;
+        box-shadow: 0 -2px #adedbb inset;
     }
 }
-
-
 .header {
     display: flex;
     justify-content: space-between;
@@ -140,21 +154,64 @@ body {
     }
     &__btn {
         display: block;
-        background-color: $accent-color;
-        color: white;
+        background: linear-gradient(to bottom right, #65e49c, #65e4b0);
+        color: $light-color;
         text-decoration: none;
-        max-width: 238px;
-        height: 22px;
+        max-width: 250px;
         border-radius: 3px;
         text-align: center;
         font-size: 18px;
         margin-top: 44px;
-        padding: 14px 0;
+        padding: 11px 0 15px 0;
         letter-spacing: 0.7px;
         margin-bottom: 14px;
+        box-shadow: 0 -2px #adedbb inset;
+    }
+    &__btn--main {
+        box-shadow: 0 -2px #59ba88 inset;
     }
     &__small {
         font-style: italic;
+        letter-spacing: 0.2px;
+    }
+    &-item{
+        margin-bottom: 55px;
+        &__date{
+            font-size: 15px;
+            font-family: 'Open Sans', serif;
+            letter-spacing: 0.8px;
+            margin-bottom: 4px;
+        }
+        &__title{
+            font-size: 18px;
+            letter-spacing: 1.2px;
+            margin-bottom: 16px;
+        }
+        &__desc{
+            font-size: 15px;
+            font-family: 'Open Sans', serif;
+            letter-spacing: 0.75px;
+        }
+        &__btn {
+            display: block;
+            background: linear-gradient(to bottom right, #65e49c, #65e4b0);
+            color: white;
+            text-decoration: none;
+            max-width: 133px;
+            border-radius: 3px;
+            text-align: center;
+            font-size: 18px;
+            margin-top: 26px;
+            padding: 11px 0px 15px 6px;
+            letter-spacing: 1.2px;
+            margin-bottom: 14px;
+            box-shadow: 0 -2px #adedbb inset;
+        }
+    }
+    &--width{
+        margin-right: 0px;
+        flex-basis: calc(93% - 520px);
+        margin-top: -20px;
     }
     
 }
@@ -184,7 +241,7 @@ body {
                     display: block;
                     text-transform: initial;
                     margin-top: 10px;
-                    letter-spacing: 0.7px;
+                    letter-spacing: 1px;
                     font-weight: 300;
                 }
             }
@@ -203,16 +260,26 @@ body {
     display: flex;
     justify-content: space-between;
 }
+
 .block-ava {
     position: relative;
     &__svg {
         position: absolute;
         right: 0;
-        z-index: -1;
+        z-index: -1;  
+    }        
+    &__svg--left {
+        right: inherit;
+        left: 0;
     }
     &__img {
         margin-top: 45px;
         margin-right: 46px;
+    }
+    &__img--left{
+        margin-top: 49px;
+        margin-left: 51px;
+        margin-right: 0;
     }
 }
 .block-counter {
@@ -238,6 +305,7 @@ body {
     display: flex;
     justify-content: space-between;
     margin-top: 82px;
+    margin-bottom: 76px;
     h3 {
         margin-bottom: 20px;
         letter-spacing: 1.2px;
@@ -281,7 +349,7 @@ body {
             }
         }
         &__btn {
-            background-color: $accent-color;
+            background: linear-gradient(to bottom right, #65e49c, #65e4b0);
             border: none;
             color: $light-color;
             text-decoration: none;
@@ -292,6 +360,7 @@ body {
             padding: 14px 45px;
             letter-spacing: 0.7px;
             margin-bottom: 19px;
+            box-shadow: 0 -2px #adedbb inset;
         }
     }
     &-social {
@@ -317,6 +386,248 @@ body {
                      
                 }
             }
+        }
+    }
+}
+.block-product {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 85px;
+    &-demo {
+        margin: 0 auto;
+        background-image: url(../img/book.svg);
+        background-repeat: no-repeat;
+        width: 270px;
+        height: 412px;
+        position: relative;
+        margin-bottom: 30px;
+        &__title {
+            color: white;
+            position: absolute;
+            left: 73px;
+            top: 70px;
+            font-family: 'Roboto Slab', serif;
+            text-transform: uppercase;
+            letter-spacing: 1.7px;
+            span{
+                color: #65e496;
+                display: block;
+                font-size: 12px;
+                font-family: 'Open Sans', serif;
+                text-transform: initial;
+                font-weight: 300;
+                line-height: 37px;
+                letter-spacing: 0.7px;
+            }
+        }
+        &__author {
+            color: #65e496;
+            position: absolute;
+            bottom: 30px;
+            left: 73px;
+            font-size: 12px;
+            font-family: 'Open Sans', serif;
+            letter-spacing: 0.6px;
+        }
+    }
+   
+    &-text {
+        text-align: center;
+        margin-top: 33px;
+        margin-bottom: 95px;
+        &>h3 {
+            margin-bottom: 18px;
+            letter-spacing: 1.9px;
+        }
+        p{
+            letter-spacing: 1px;
+            margin-bottom: 15px;
+        }
+        a {
+            text-decoration: none;
+            color: $accent-color;
+            font-family: 'Open Sans', serif;
+        }
+        
+        
+    }
+
+}
+.block-blog {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 86px;
+    h4 {
+        font-size: 18px;
+        letter-spacing: 1.3px;
+    }
+    &-img{
+        width: 360px;
+        height: 224px;
+        overflow: hidden;
+        position: relative;
+        margin-bottom: 17px;
+        img{
+            width: 360px;
+            height: 224px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            object-fit: cover;
+        }
+    }
+    h4{
+        margin-bottom: 3px;
+    }
+    &-info {
+        font-size: 15px;
+        display: flex;
+        letter-spacing: 0.8px;
+        margin-bottom: 13px;
+        a{
+            color: $accent-color;
+            text-decoration: none;
+        }
+    }
+    &__desc{
+        font-size: 15px;
+        font-family: 'Open Sans', serif;
+        margin-bottom: 96px;
+        letter-spacing: 0.7px;
+        width: 369px;
+    }
+    & + page__btn {
+        display: block;
+        margin: 84px auto 0;
+        padding: 20px 0;
+        width: 262px;
+        height: 48px;
+        letter-spacing: 1px;
+    }
+}
+.block-letter {
+    display: flex;
+    justify-content: space-between;
+    &-item {
+        flex-basis: 49%;
+    }
+    &__title{
+        font-size: 48px;
+        margin-top: 8px;
+        margin-bottom: 23px;
+        letter-spacing: 1.9px;
+    }
+    &__text{
+        font-size: 15px;
+        font-family: 'Open Sans', serif;
+        letter-spacing: 0.75px;
+    }
+    &__input {
+        width: 100%;
+        box-sizing: border-box;
+        border-radius: 3px;
+        background-color: $bg-dark-color;  
+        border: none;
+        color: $gray-color;
+        padding: 15px 15px;
+        letter-spacing: 0.6px;
+        &:focus {
+            outline: none;
+        }
+        &::placeholder {
+            color: $gray-color;
+        }
+    } 
+    &__btn{
+        background: linear-gradient(to bottom right, #65e49c, #65e4b0);
+        border: none;
+        color: $light-color;
+        text-decoration: none;
+        border-radius: 3px;
+        text-align: center;
+        font-size: 18px;
+        margin-top: 21px;
+        padding: 14px 0px;
+        letter-spacing: 0.7px;
+        box-shadow: 0 -2px #adedbb inset;
+        display: block;
+        width: 100%;
+        &:focus {
+            outline: none;
+        }
+    }
+
+}
+.footer {
+    background-color: $bg-dark-color;
+    color: $gray-color;
+}
+.block-footer{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 160px;
+    &__copy{
+        flex-basis: 34%;
+        p{
+            letter-spacing: 1.2px;
+        }
+    }
+    &__cr{
+        margin-top: 24px;
+    }
+    &__info{
+        flex-basis: 23%;
+    }
+    h2{
+        text-transform: uppercase;
+        padding-top: 7px;
+        margin-right: 41px;
+        letter-spacing: 0.8px;
+        margin-bottom: 22px;
+    }
+    &>div{
+        justify-content: space-between;
+    }
+    &__logo {
+        display: block;
+        width: 137px;
+        height: 28px;
+        background-image: url(../img/logo.svg);
+        background-repeat: no-repeat;
+        padding-top: 28px;
+    }
+    &__title{
+        font-size: 18px;
+        color: $accent-color;
+    }
+    &__list{
+        list-style-type: none;
+        padding-left: 0;
+        line-height: 28px;
+    }
+    
+    &__right{
+        margin-left: 29px;
+        line-height: 25px;
+        ul{
+            line-height: 25px;
+            letter-spacing: 0.4px;
+        }
+    }
+    &__social{
+        display: flex;
+        list-style-type: none;
+        padding-left: 0;
+        line-height: 28px;
+        margin-top: 12px;
+
+        &>li{
+            margin-right: 10px;
+            &>a{
+                color: $accent-color;
+                letter-spacing: 2.5px;
+            } 
         }
     }
 }
