--- a/src/views/index.html
+++ b/src/views/index.html
@@ -50,7 +50,7 @@
 
             <div class="wrap">
                     <div class="block-book">
-                        <div class="block-book-demo">
+                        <div class="block-book-demo block-book-demo--margin">
                             <h2 class="block-book-demo__title">
                                 Good book
                                 <span>Don't judge a book by its cover</span>
