--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -97,7 +97,7 @@ body {
         box-shadow: 0 -2px #adedbb inset;
         &-blog {
             max-width: 265px;
-            margin-bottom: -2px;
+            margin-bottom: -4px;
         }
     }
     &__svg {
@@ -107,7 +107,7 @@ body {
         z-index: -1;
     }
     &_emma {
-        margin-bottom: -30px;
+        margin-bottom: -34px;
     }
 }
 .header {
@@ -117,7 +117,10 @@ body {
     max-width: 1170px;
     margin: 0 auto;
     font-family: 'Open Sans', serif;
-    padding: 24px 15px 179px 15px;
+    padding: 40px 15px 179px 15px;
+    @media(max-width:920px) {
+        flex-direction: column;
+    }
     &__logo {
         display: block;
         width: 137px;
@@ -131,7 +134,7 @@ body {
         justify-content: flex-end;
         padding-top: 4px;
         &__item {
-            margin-left: 20px;
+            margin-left: 21px;
             border-bottom: 3px solid transparent;
             transition: 0.3s;
             &:hover {
@@ -148,34 +151,38 @@ body {
         }
     }
 }
-
 .block-text {
-    flex-basis: 50%;
-    margin-right: 85px;
+    flex-basis: calc(93% - 500px);
+    margin-right: 82px;
+    @media(max-width:1020px) {
+        flex-basis: calc(93% - 315px);
+    }
     &__name{
         font-family: 'Open Sans', serif;  
         font-size: 18px;
         letter-spacing: 0.85px;
-        margin-bottom: 43px;
+        margin-bottom: 28px;
         margin-top: 1px;
     }
     &__name_top {
         margin-top: 16px;
         margin-left: 0;
-        margin-bottom: 33px;
+        margin-bottom: 18px;
     }
     &__title {
         font-size: 48px;
         font-weight: 700;
         letter-spacing: 1.8px;
-        margin-bottom: 40px;
+        margin-bottom: 37px;
+        line-height: 53px;
         span {
             display: block;
             color: $accent-color;
             font-size: 18px;
-            margin-top:25px;
-            letter-spacing: 1px;
+            margin-top:12px;
+            letter-spacing: 1.2px;
             font-weight: 400;
+            line-height: 23px;
         }
         &-emma {
             letter-spacing: 1.5px;
@@ -259,54 +266,67 @@ body {
         margin-right: 0px;
         flex-basis: calc(93% - 520px);
         margin-top: -20px;
+        @media(max-width: 1020px) {
+            flex-basis: calc(93% - 315px);
+        }
     }
-    
 }
 .block-book{
     display: flex;
     justify-content: space-between;
-        &-demo{
-            display: block;
-            position: relative;
-            width: 447px;
-            height: 643px;
-            background-image: url(../img/book.svg);
-            background-repeat: no-repeat;
-            flex-basis: 447px;
-            justify-content: flex-start;
-            &__title{
-                font-size: 36px;
-                text-transform: uppercase;
-                position: absolute;
-                left: 131px;
-                top: 118px;
-                letter-spacing: 1px;
-                span{
-                    font-family: 'Open Sans', serif;
-                    font-size: 14px;
-                    color: $accent-color;
-                    display: block;
-                    text-transform: initial;
-                    margin-top: 10px;
-                    letter-spacing: 0.9px;
-                    font-weight: 300;
-                }
-            }
-            &__author {
+    @media(max-width:1020px) {
+        flex-direction: column-reverse;
+    }
+    &-demo{
+        display: block;
+        position: relative;
+        width: 447px;
+        height: 643px;
+        background-image: url(../img/book.svg);
+        background-repeat: no-repeat;
+        flex-basis: 447px;
+        justify-content: flex-start;
+        @media(max-width:1020px) {
+            margin: 0 auto 50px;
+        }
+        &--margin {
+            margin-right: 15px;
+        }
+        &__title{
+            font-size: 36px;
+            text-transform: uppercase;
+            position: absolute;
+            left: 131px;
+            top: 118px;
+            letter-spacing: 1px;
+            span{
                 font-family: 'Open Sans', serif;
                 font-size: 14px;
-                color: $accent-color;  
-                position: absolute;
-                bottom: 56px;
-                left: 85px;
-                letter-spacing: 0.7px;
+                color: $accent-color;
+                display: block;
+                text-transform: initial;
+                margin-top: 10px;
+                letter-spacing: 0.9px;
+                font-weight: 300;
             }
         }
+        &__author {
+            font-family: 'Open Sans', serif;
+            font-size: 14px;
+            color: $accent-color;  
+            position: absolute;
+            bottom: 56px;
+            left: 85px;
+            letter-spacing: 0.7px;
+        }
     }
+}
 .block-author {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 0px;
+    @media(max-width:850px) {
+        flex-direction: column-reverse;
+    }
 }
 
 .block-ava {
@@ -314,7 +334,11 @@ body {
     &__svg {
         position: absolute;
         right: 0;
-        z-index: -1;  
+        z-index: -1; 
+        @media(max-width:1020px) {
+            width: 300px;
+            height: 412px;
+        } 
     }        
     &__svg--left {
         right: inherit;
@@ -323,6 +347,9 @@ body {
     &__img {
         margin-top: 45px;
         margin-right: 46px;
+        @media(max-width:1020px) {
+            width: 300px;;
+        }
     }
     &__img--left{
         margin-top: 49px;
@@ -335,10 +362,16 @@ body {
     justify-content: space-between;
     margin: 213px auto 0 auto;
     max-width: 85%;
+    @media(max-width:750px) {
+        flex-direction: column;
+    }
     p {
         font-family: 'Open Sans', serif; 
         text-align: center;
         font-size: 18px;
+        @media(max-width:750px) {
+            margin-bottom: 80px;
+        }
         span {
             font-family: 'Roboto Slab', serif;
             display: block;
@@ -354,13 +387,18 @@ body {
     display: flex;
     justify-content: space-between;
     margin-top: 82px;
-    margin-bottom: 76px;
+    margin-bottom: 72px;
+    @media(max-width:1020px) {
+        max-width: 750px;
+        margin: 82px auto 0;
+        flex-direction: column;
+    }
     h3 {
         margin-bottom: 20px;
         letter-spacing: 1.2px;
     }
     &-text {
-        flex-basis: 41%;
+        flex-basis: calc(100% - 690px);
         &__desk {
         font-family: 'Open Sans', serif;
         letter-spacing: 0.8px;
@@ -369,13 +407,14 @@ body {
         }
     }
     &-table {
-        flex-basis: 49%;
+        flex-basis: 570px;
         &__list {
             margin: 25px 0 0 0;
             padding: 0;
             counter-reset: list;
             column-count: 2;
             line-height: 25px;
+            column-gap: 19px;
             &>li {
                 position: relative;
                 padding-left: 36px;
@@ -393,7 +432,7 @@ body {
                     line-height: 22px;
                     position: absolute;
                     left: 0;
-                    top: 1px;
+                    top: calc(50% - 11px);
                     background-color: #5fc9b3;
                     color: $light-color;
                     padding: 0px 7px;
@@ -445,6 +484,9 @@ body {
     display: flex;
     justify-content: space-between;
     margin-top: 85px;
+    @media(max-width:1020px) {
+        flex-direction: column;
+    }
     &-demo {
         margin: 0 auto;
         background-image: url(../img/book.svg);
@@ -481,46 +523,46 @@ body {
             font-family: 'Open Sans', serif;
             letter-spacing: 0.6px;
         }
-    }
-   
+    } 
     &-text {
         text-align: center;
         margin-top: 33px;
         margin-bottom: 95px;
         &>h3 {
-            margin-bottom: 18px;
+            margin-bottom: 16px;
             letter-spacing: 1.9px;
         }
         p{
             letter-spacing: 1px;
             margin-bottom: 17px;
             line-height: 25px;
-        }
+        }    
         a {
             text-decoration: none;
             color: $accent-color;
             font-family: 'Open Sans', serif;
-        }
-        
-        
+        }  
     }
-
 }
 .block-blog {
     display: flex;
     justify-content: space-between;
     margin-top: 0;
     padding-top: 1px;
+    @media(max-width:1150px) {
+        flex-direction: column;
+    }
     h4 {
         font-size: 17px;
         letter-spacing: 0.9px;
+        margin-bottom: 1px;
     }
     &-img{
         width: 360px;
         height: 224px;
         overflow: hidden;
         position: relative;
-        margin-bottom: 17px;
+        margin-bottom: 18px;
         img{
             width: 360px;
             height: 224px;
@@ -532,7 +574,7 @@ body {
         }
     }
     h4{
-        margin-bottom: 3px;
+        margin-bottom: 1px;
     }
     &-info {
         font-size: 15px;
@@ -550,7 +592,7 @@ body {
         margin-bottom: 96px;
         letter-spacing: 0.7px;
         width: 369px;
-        line-height: 25px;
+        line-height: 24px;
     }
     & + page__btn {
         display: block;
@@ -559,6 +601,14 @@ body {
         width: 262px;
         height: 48px;
         letter-spacing: 1px;
+    }
+    &-item {
+        flex-basis: 33%;
+        margin: 0 auto;
+        @media(max-width:1150px) {
+            flex-basis: 100%;
+            justify-content: stretch;
+        }
     }
 }
 .block-letter {
@@ -571,9 +621,9 @@ body {
     }
     &__title{
         font-size: 48px;
-        margin-top: 1px;
         margin-bottom: 27px;
-        letter-spacing: 1.8px;
+        letter-spacing: 2px;
+        padding-top: 2px;
     }
     &__text{
         font-size: 15px;
@@ -587,9 +637,9 @@ body {
         background-color: $bg-dark-color;  
         border: none;
         color: $gray-color;
-        padding: 15px 15px;
+        padding: 15px 30px;
         letter-spacing: 0.6px;
-        margin-top: -5px;
+        margin-top: -3px;
         &:focus {
             outline: none;
         }
@@ -680,7 +730,7 @@ body {
             margin-left: -2px;
         }
     }
-    
+
     &__right{
         margin-left: 29px;
     }
@@ -691,15 +741,13 @@ body {
         line-height: 28px;
         margin-top: 13px;
         margin-left: -2px;
-    }
-
         &>li{
             margin-right: 10px;
             margin-top: -4px;
             &>a{
                 color: $accent-color;
                 letter-spacing: 2.5px;
-            } 
+            }     
         }
     }
 }
